tests/core/interpreter/test_attr_default_coercion_data/golden/default_not_a_label.golden.stderr
# This file is @generated, regenerate by re-running test with `-- --env BUCK2_UPDATE_GOLDEN=1` appended to the test command

Command failed:
Error evaluating expression:
    root//:
    ^-----^


Caused by:
    0: From load at BUILD.bazel:1
    1: Error evaluating module: `root//error_rule.bzl`
    2: Traceback (most recent call last):
         * error_rule.bzl:17, in <module>
             "someattr": attr.label(default = "notaproperlabel"),

       error: Error coercing "notaproperlabel"
         --> error_rule.bzl:17:21
          |
       17 |         "someattr": attr.label(default = "notaproperlabel"),
          |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
          |
    3: Invalid target pattern `notaproperlabel` is not allowed
    4: Expected pattern to contain `:`, trailing `/...` or literal `...`.
